# proto

./: .gitignore  .npmignore  CHANGELOG.md  PUBLISHING.md  buf.gen.yaml  buf.yaml  go.mod  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-npm.yml
proto/chat/v1/: conversation.proto  message.proto  participant.proto
proto/common/v1/: address.proto  date.proto
proto/error/v1/: codes.proto  error.proto
proto/permissions/v1/: permissions.proto
proto/place/v1/: location.proto
proto/platform/v1/: event.proto  topic.proto
proto/storage/v1/: collection.proto  document.proto  file_reference.proto  image.proto  shared.proto  video.proto
proto/user/v1/: user.proto
proto/workspace/v1/: amenity.proto  category.proto  feature.proto  member.proto  workspace.proto
